Corrected some spacing issues

--- a/assets/sass/object/_page_header.scss
+++ b/assets/sass/object/_page_header.scss
@@ -19,7 +19,7 @@
     width: 192px;
     height: 50px;
 
-    margin-left: 5px;
+    margin: 5px 0 0 5px;
 
     background-repeat: no-repeat;
     background-position: center center;
